--- a/euphoria-front/public/locales/az/translation.json
+++ b/euphoria-front/public/locales/az/translation.json
@@ -68,15 +68,30 @@
   "Top Brands Deal": "Ən Yaxşı Brendlər Sövdələşməsi",
   "Up To": "Qədər",
   "off on brands": "markalarda endirim",
-  "Clothing for Women Online in India":"Hindistanda Qadınlar üçün Onlayn Geyim",
-  "Reexplore Women's Clothing Collection Online at Euphoria":"Euphoria-da Qadın Geyimləri Kolleksiyasını onlayn kəşf edin",
-  "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,":"Qadın Geyimləri - Hindistanda Qadınlar üçün Geyimləri onlayn almaq üçün ən yaxşı veb saytı axtarırsınız? Ən gözəl və ən dəbli qadın geyimləri axtarışınız burada başa çatır. Dəbli Gündəlik Qadın geyimləri onlayn alış-verişindən yüksək keyfiyyətli pambıq qadın geyimlərinə qədər,",
-  "Euphoria":"Euphoria",
-  "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online":"Qadın Geyimləri Online-ın ən son və ən yaxşı dizaynları ilə örtülmüş Qadın Kolleksiyasının şkafına malikdir",
-  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.":"Qadınlar üçün geyim kolleksiyamız sizi Qadın Geyimində ikonik seçim oxşarlığı ilə trend təyin edəcək.",
-  "One-Stop Destination to Shop Every Clothing for Women: Euphoria":"Qadınlar üçün hər geyimi almaq üçün bir pəncərə: Euphoria",
-  "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,":"Bu gün Qadınlar üçün Geyim hər şeydən əvvəl daha çox populyarlıq qazanır. Bunun səbəbi qadınların narahat moda daşımağa öyrəşdiyi dövrlər geridə qaldı. Bu gün bir xanım rahat paltar olan Gündəlik Qadın Geyimində olduqda daha gözəl görünür. Bununla bağlı,",
-  "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.":"getdiyi yerdə onu qalib edəcək Qəşəng Qadın Geyimlərinin geniş çeşidinə malikdir.",
-  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ":"Qadınlar üçün geyim kolleksiyamız sizi Qadın Geyimində ikonik seçim oxşarlığı ilə trend təyin edəcək. Tamamilə aydındır ki, həmişə axtardığınız premium materialdan və zərif dizayndan ibarət Qadınlar üçün Western Wear ala biləcəyiniz Qadın Geyimləri onlayn mağazalarının çox az olduğunu söyləmək olar. Əsasən,",
-  "See More":"Daha çox Gör"
+  "Clothing for Women Online in India": "Hindistanda Qadınlar üçün Onlayn Geyim",
+  "Reexplore Women's Clothing Collection Online at Euphoria": "Euphoria-da Qadın Geyimləri Kolleksiyasını onlayn kəşf edin",
+  "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,": "Qadın Geyimləri - Hindistanda Qadınlar üçün Geyimləri onlayn almaq üçün ən yaxşı veb saytı axtarırsınız? Ən gözəl və ən dəbli qadın geyimləri axtarışınız burada başa çatır. Dəbli Gündəlik Qadın geyimləri onlayn alış-verişindən yüksək keyfiyyətli pambıq qadın geyimlərinə qədər,",
+  "Euphoria": "Euphoria",
+  "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online": "Qadın Geyimləri Online-ın ən son və ən yaxşı dizaynları ilə örtülmüş Qadın Kolleksiyasının şkafına malikdir",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.": "Qadınlar üçün geyim kolleksiyamız sizi Qadın Geyimində ikonik seçim oxşarlığı ilə trend təyin edəcək.",
+  "One-Stop Destination to Shop Every Clothing for Women: Euphoria": "Qadınlar üçün hər geyimi almaq üçün bir pəncərə: Euphoria",
+  "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,": "Bu gün Qadınlar üçün Geyim hər şeydən əvvəl daha çox populyarlıq qazanır. Bunun səbəbi qadınların narahat moda daşımağa öyrəşdiyi dövrlər geridə qaldı. Bu gün bir xanım rahat paltar olan Gündəlik Qadın Geyimində olduqda daha gözəl görünür. Bununla bağlı,",
+  "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.": "getdiyi yerdə onu qalib edəcək Qəşəng Qadın Geyimlərinin geniş çeşidinə malikdir.",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ": "Qadınlar üçün geyim kolleksiyamız sizi Qadın Geyimində ikonik seçim oxşarlığı ilə trend təyin edəcək. Tamamilə aydındır ki, həmişə axtardığınız premium materialdan və zərif dizayndan ibarət Qadınlar üçün Western Wear ala biləcəyiniz Qadın Geyimləri onlayn mağazalarının çox az olduğunu söyləmək olar. Əsasən,",
+  "See More": "Daha çox Gör",
+  "Buy Women's Clothing at Best Price": "Qadın Geyimlərini Ən Yaxşı Qiymətə Alın",
+  "Women's Clothing": "Qadın geyimləri",
+  "Best Price": "Ən yaxşı qiymət",
+  "Pick Any 4- Womens Plain T-shirt Combo": "İstənilən 4- Qadın Düz T-shirt Kombo seçin",
+  "Pick Any 4- Plain Womens Boxer Combo": "İstənilən 4- Düz Qadın Boksçu Kombo seçin",
+  "Pick Any 4 - Women Plain Full Sleeve T-shirt Combo": "Pick Any 4 - Qadın Düz Qollu T-shirt Kombo",
+  "Multicolor Checkered Long Casual Shir  ts for Women": "Qadınlar üçün Çoxrəngli Damalı Uzun Gündəlik Köynəklər",
+  "Pick Any 2: Plain Boxy Casual Shirts for Women Combo": "İstənilən 2-ni seçin: Qadın kombinasiyası üçün düz qutulu təsadüfi köynəklər",
+  "Blue Floral Anarkali Kurti": "Mavi çiçəkli Anarkali Kurti",
+  "Jade Black Narrow Cut Flexible Women Jeggings": "Jade Qara Dar Cut Elastik Qadın Jeggings",
+  "Mustard-yellow Solid Straight-Fit Women Pant": "Xardal sarısı Bərk Düz Fit Qadın Şalvarı",
+  "Women Pants Combo - Pick Any 2": "Qadın Şalvar Kombo - İstənilən 2-ni seçin",
+  "Pista Green Solid Boxy Casual Shirts for Women": "Qadınlar üçün Pista Green Solid Boxy Gündəlik Köynəklər",
+  "Plain Burgundy Womens Boxer": "Düz Bordo Qadın Boksçu",
+  "Striped Front Tie Casual Shirts for Women": "Qadın üçün Zolaqlı Qabaq Qalstuklu Gündəlik Köynəklər"
 }
