--- a/euphoria-front/public/locales/ru/translation.json
+++ b/euphoria-front/public/locales/ru/translation.json
@@ -1,82 +1,97 @@
 {
-    "Search": "Поиск",
-    "Login": "Авторизоваться",
-    "Sign Up": "Зарегистрироваться",
-    "Sign In Page": "Страница входа",
-    "Continue With Google": "Продолжить с Google",
-    "Continue With Twitter": "Продолжить в Твиттере",
-    "OR": "ИЛИ",
-    "User name or email address": "Имя пользователя или адрес электронной почты",
-    "Password": "Пароль",
-    "Show": "Покажи",
-    "Hide": "Скрыть",
-    "Forget your password": "Забыли свой пароль",
-    "Sign In": "Войти",
-    "Don’t have an account?": "Нет аккаунта?",
-    "Sign up": "Зарегистрироваться",
-    "Reset Your Password": "Сбросить пароль",
-    "Enter your email and we`ll send you a link to reset your password.": "Введите свой адрес электронной почты, и мы вышлем вам ссылку для сброса пароля.",
-    "Please check it.": "Пожалуйста, проверь это.",
-    "Email": "Э-почта",
-    "Send": "Отправлять",
-    "Back to": "Вернись",
-    "T-shirt / Tops": "Футболка/Топы",
-    "Summer Value Pack": "Летний выгодный пакет",
-    "cool / colorful / comfy": "круто/красочно/комфортно",
-    "Shop Now": "Купить сейчас",
-    "Beyoung Presents": "Бэйонг представляет",
-    "Breezy Summer Style": "Ветреный летний стиль",
-    "UPTO 50% OFF": "СКИДКА ДО 50%",
-    "Low Price": "Низкая цена",
-    "High Coziness": "Высокий уют",
-    "Explore Items": "Исследовать предметы",
-    "Need Help": "Нужна помощь",
-    "Contact Us": "Связаться с нами",
-    "Track Order": "Отследить заказ",
-    "Returns & Refunds": "Возврат и возмещение",
-    "FAQ`s": "Часто задаваемые вопросы",
-    "Career": "Карьера",
-    "Company": "Компания",
-    "About Us": "О нас",
-    "euphoria Blog": "euphoria Блог",
-    "euphoriastan": "euphoriastan",
-    "Collaboration": "Сотрудничество",
-    "Media": "СМИ",
-    "More Info": "Больше информации",
-    "Term and Conditions": "Срок и условия",
-    "Privacy Policy": "политика конфиденциальности",
-    "Shipping Policy": "Политика доставки",
-    "Sitemap": "Карта сайта",
-    "Location": "Расположение",
-    "Eklingpura Chouraha, Ahmedabad Main Road": "Эклингпура Чураха, главная дорога Ахмедабада",
-    "(NH 8- Near Mahadev Hotel) Udaipur, India- 313002": "(NH 8- Рядом с отелем Mahadev), Удайпур, Индия- 313002",
-    "Downlod The App": "Загрузите приложение",
-    "Popular Categories": "Популярные категории",
-    "Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.": "© Euphoria Folks Pvt Ltd., 2023. Все права защищены.",
-    "Knitted Joggers": "Вязаные Джоггеры",
-    "Full Sleeve": "Полный Рукав",
-    "Active T-Shirts": "Активные Футболки",
-    "Urban Shirts": "Городские Рубашки",
-    "Check Email": "Проверить Электронную Почту",
-    "Please check your email inbox and click on the provided link to reset your password . If you don’t receive email": "Пожалуйста, проверьте свой почтовый ящик и нажмите на предоставленную ссылку, чтобы сбросить пароль. Если вы не получаете электронное письмо",
-    "Click here to resend": "Нажмите здесь, чтобы отправить повторно",
-    "Verify your code.": "Проверьте свой код.",
-    "Verification Code": "Проверочный Код",
-    "Verify Code": "Проверить Код",
-    "WE MADE YOUR EVERYDAY FASHION BETTER!": "МЫ СДЕЛАЛИ ВАШУ ПОВСЕДНЕВНУЮ МОДУ ЛУЧШЕ!",
-    "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "На пути к улучшению повседневной моды компания euphoria представляет линейку одежды EVERYDAY – Удобная и доступная мода 24/7. ",
-    "Top Brands Deal": "Лучшее предложение брендов",
-    "Up To": "До",
-    "off on brands": "скидка на марки",
-    "Clothing for Women Online in India":"Одежда для женщин онлайн в Индии",
-    "Reexplore Women's Clothing Collection Online at Euphoria":"Откройте для себя новую коллекцию женской одежды онлайн на сайте Euphoria",
-    "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,":"Женская одежда. Вы ищете лучший сайт, где можно купить женскую одежду онлайн в Индии? Что ж, на этом ваши поиски самой крутой и стильной женской одежды заканчиваются. От модной повседневной женской одежды в Интернете до женской одежды из хлопка премиум-качества.",
-    "Euphoria":"Euphoria",
-    "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online":"В шкафу женской коллекции представлены новейшие и лучшие модели женской одежды в Интернете.",
-    "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.":"Наша коллекция женской одежды сделает вас законодателем моды с легендарным выбором женской одежды.",
-    "One-Stop Destination to Shop Every Clothing for Women: Euphoria":"Универсальное место для покупки любой одежды для женщин: Euphoria",
-    "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,":"Сегодня все большую популярность набирает прежде всего одежда для женщин. Это потому, что прошли те времена, когда женщины привыкли носить неудобную моду. Сегодня женщина выглядит красивее, когда она одета в удобную повседневную женскую одежду. Что касается этого,",
-    "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.":"имеет большой ассортимент стильной женской одежды, которая сделает ее победительницей, куда бы она ни пошла.",
-    "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ":"Наша коллекция женской одежды сделает вас законодателем моды с легендарным выбором женской одежды. Совершенно очевидно, что существует очень мало интернет-магазинов женской одежды, где вы можете купить одежду Western Wear для женщин, состоящую из материалов премиум-класса и элегантного дизайна, которые вы всегда ищете. По сути,",
-    "See More":"Узнать больше"
+  "Search": "Поиск",
+  "Login": "Авторизоваться",
+  "Sign Up": "Зарегистрироваться",
+  "Sign In Page": "Страница входа",
+  "Continue With Google": "Продолжить с Google",
+  "Continue With Twitter": "Продолжить в Твиттере",
+  "OR": "ИЛИ",
+  "User name or email address": "Имя пользователя или адрес электронной почты",
+  "Password": "Пароль",
+  "Show": "Покажи",
+  "Hide": "Скрыть",
+  "Forget your password": "Забыли свой пароль",
+  "Sign In": "Войти",
+  "Don’t have an account?": "Нет аккаунта?",
+  "Sign up": "Зарегистрироваться",
+  "Reset Your Password": "Сбросить пароль",
+  "Enter your email and we`ll send you a link to reset your password.": "Введите свой адрес электронной почты, и мы вышлем вам ссылку для сброса пароля.",
+  "Please check it.": "Пожалуйста, проверь это.",
+  "Email": "Э-почта",
+  "Send": "Отправлять",
+  "Back to": "Вернись",
+  "T-shirt / Tops": "Футболка/Топы",
+  "Summer Value Pack": "Летний выгодный пакет",
+  "cool / colorful / comfy": "круто/красочно/комфортно",
+  "Shop Now": "Купить сейчас",
+  "Beyoung Presents": "Бэйонг представляет",
+  "Breezy Summer Style": "Ветреный летний стиль",
+  "UPTO 50% OFF": "СКИДКА ДО 50%",
+  "Low Price": "Низкая цена",
+  "High Coziness": "Высокий уют",
+  "Explore Items": "Исследовать предметы",
+  "Need Help": "Нужна помощь",
+  "Contact Us": "Связаться с нами",
+  "Track Order": "Отследить заказ",
+  "Returns & Refunds": "Возврат и возмещение",
+  "FAQ`s": "Часто задаваемые вопросы",
+  "Career": "Карьера",
+  "Company": "Компания",
+  "About Us": "О нас",
+  "euphoria Blog": "euphoria Блог",
+  "euphoriastan": "euphoriastan",
+  "Collaboration": "Сотрудничество",
+  "Media": "СМИ",
+  "More Info": "Больше информации",
+  "Term and Conditions": "Срок и условия",
+  "Privacy Policy": "политика конфиденциальности",
+  "Shipping Policy": "Политика доставки",
+  "Sitemap": "Карта сайта",
+  "Location": "Расположение",
+  "Eklingpura Chouraha, Ahmedabad Main Road": "Эклингпура Чураха, главная дорога Ахмедабада",
+  "(NH 8- Near Mahadev Hotel) Udaipur, India- 313002": "(NH 8- Рядом с отелем Mahadev), Удайпур, Индия- 313002",
+  "Downlod The App": "Загрузите приложение",
+  "Popular Categories": "Популярные категории",
+  "Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.": "© Euphoria Folks Pvt Ltd., 2023. Все права защищены.",
+  "Knitted Joggers": "Вязаные Джоггеры",
+  "Full Sleeve": "Полный Рукав",
+  "Active T-Shirts": "Активные Футболки",
+  "Urban Shirts": "Городские Рубашки",
+  "Check Email": "Проверить Электронную Почту",
+  "Please check your email inbox and click on the provided link to reset your password . If you don’t receive email": "Пожалуйста, проверьте свой почтовый ящик и нажмите на предоставленную ссылку, чтобы сбросить пароль. Если вы не получаете электронное письмо",
+  "Click here to resend": "Нажмите здесь, чтобы отправить повторно",
+  "Verify your code.": "Проверьте свой код.",
+  "Verification Code": "Проверочный Код",
+  "Verify Code": "Проверить Код",
+  "WE MADE YOUR EVERYDAY FASHION BETTER!": "МЫ СДЕЛАЛИ ВАШУ ПОВСЕДНЕВНУЮ МОДУ ЛУЧШЕ!",
+  "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "На пути к улучшению повседневной моды компания euphoria представляет линейку одежды EVERYDAY – Удобная и доступная мода 24/7. ",
+  "Top Brands Deal": "Лучшее предложение брендов",
+  "Up To": "До",
+  "off on brands": "скидка на марки",
+  "Clothing for Women Online in India": "Одежда для женщин онлайн в Индии",
+  "Reexplore Women's Clothing Collection Online at Euphoria": "Откройте для себя новую коллекцию женской одежды онлайн на сайте Euphoria",
+  "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,": "Женская одежда. Вы ищете лучший сайт, где можно купить женскую одежду онлайн в Индии? Что ж, на этом ваши поиски самой крутой и стильной женской одежды заканчиваются. От модной повседневной женской одежды в Интернете до женской одежды из хлопка премиум-качества.",
+  "Euphoria": "Euphoria",
+  "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online": "В шкафу женской коллекции представлены новейшие и лучшие модели женской одежды в Интернете.",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.": "Наша коллекция женской одежды сделает вас законодателем моды с легендарным выбором женской одежды.",
+  "One-Stop Destination to Shop Every Clothing for Women: Euphoria": "Универсальное место для покупки любой одежды для женщин: Euphoria",
+  "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,": "Сегодня все большую популярность набирает прежде всего одежда для женщин. Это потому, что прошли те времена, когда женщины привыкли носить неудобную моду. Сегодня женщина выглядит красивее, когда она одета в удобную повседневную женскую одежду. Что касается этого,",
+  "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.": "имеет большой ассортимент стильной женской одежды, которая сделает ее победительницей, куда бы она ни пошла.",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ": "Наша коллекция женской одежды сделает вас законодателем моды с легендарным выбором женской одежды. Совершенно очевидно, что существует очень мало интернет-магазинов женской одежды, где вы можете купить одежду Western Wear для женщин, состоящую из материалов премиум-класса и элегантного дизайна, которые вы всегда ищете. По сути,",
+  "See More": "Узнать больше",
+  "Buy Women's Clothing at Best Price": "Покупайте женскую одежду по лучшей цене",
+  "Women's Clothing": "Женская одежда",
+  "Best Price": "Лучшая цена",
+  "Pick Any 4- Womens Plain T-shirt Combo": "Выберите любую комбинацию из 4 женских однотонных футболок",
+  "Pick Any 4- Plain Womens Boxer Combo": "Выберите любую комбинацию из 4-х простых женских боксеров.",
+  "Pick Any 4 - Women Plain Full Sleeve T-shirt Combo": "Выберите любую комбинацию из 4 женских однотонных футболок с длинными рукавами",
+  "Multicolor Checkered Long Casual Shirts for Women": "Длинные повседневные рубашки в разноцветную клетку для женщин",
+  "Pick Any 2: Plain Boxy Casual Shirts for Women Combo": "Выберите любую 2: комбинация простых повседневных рубашек свободного кроя для женщин",
+  "Blue Floral Anarkali Kurti": "Синий цветочный принт Анаркали Курти",
+  "Jade Black Narrow Cut Flexible Women Jeggings": "Нефритовые черные гибкие женские джеггинсы узкого кроя",
+  "Mustard-yellow Solid Straight-Fit Women Pant": "Однотонные женские брюки прямого кроя горчично-желтого цвета",
+  "Women Pants Combo - Pick Any 2": "Комбинация женских брюк — выберите любые 2",
+  "Pista Green Solid Boxy Casual Shirts for Women": "Однотонные свободные повседневные рубашки Pista Green для женщин",
+  "Plain Burgundy Womens Boxer": "Однотонные бордовые женские боксеры",
+  "Striped Front Tie Casual Shirts for Women": "Полосатые повседневные рубашки для женщин с завязкой спереди"
 }
